# echofinder

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre_tool_use.sh
.github/workflows/: test.yml
echofinder/: __main__.py
echofinder/models/: file_node.py  hash_cache.py  scanner.py  session.py
echofinder/services/: file_operations.py  file_type.py  hashing_engine.py  polling_engine.py  preview.py
echofinder/ui/: empty_state.py  file_tree_view.py  icons.py  main_window.py  metadata_panel.py  node_delegate.py  preview_pane.py  tree_model.py
echofinder/ui/preview/: __init__.py  audio_widget.py  epub_widget.py  folder_contents_widget.py  folder_widget.py  image_preview_widget.py  image_widget.py  media_playback_widget.py  pdf_preview_widget.py  pdf_widget.py  symlink_widget.py  text_preview_widget.py  text_widget.py  unreadable_widget.py  unsupported_widget.py  video_widget.py
tests/: test_compute_hash.py  test_file_operations.py  test_file_type_resolver.py  test_fmt_ms.py  test_hash_cache.py  test_preview.py  test_scanner.py  test_session.py
