[project]
name = "echofinder"
version = "0.1.0"
description = "Cross-platform desktop file manager with background duplicate detection and rich file previewing"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Scott Michael Slayback", email = "Scott.M.Slayback@gmail.com" },
]
keywords = [
    "file-manager",
    "duplicate-detection",
    "pdf-preview",
    "epub-preview",
    "cross-platform",
    "pyqt6",
]
dependencies = [
    "charset-normalizer>=3.4.7",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "pygments>=2.20.0",
    "pymupdf>=1.27.2.2",
    "pyqt6>=6.11.0",
    "python-magic>=0.4.27",
    "send2trash>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
